 * Various fixes in the online-resize code path, including online shrinking
   and handling the case that the memory allocation for the new bitmap
   failed.
 * Random improvements to drbdadm: 
   * The "size" option is now allowed in the disk section
   * A new "disable-ip-verification" option for the global section
   * The "disable-io-hints" option is not longer available.
 * Fixed a potential very unlikely race condition that in the end would
   trigger an ERR in drbd_actlog.c:607. Actually I never saw this trigger.
 * Fixed a logic bug in _drbd_process_ee() that, paired with a race condition
   could trigger a "ASSERT(b->n_req == set_size)" upon disconnect.
 * Removed the "disable_io_hints" module parameter.
 * Added the "disable_bd_claim" module parameter, to allow users, WHO 
   KNOW WHAT THEY DO, to read-access the data on the secondary node.
 * Allow "drbdadm invalidate" only in StandAlone and Connected states. 

0.7.11 (api:77/proto:74)
-----
 * The upper limit of the runtime tuning parameter max_buffers 
   was ways too low for today's IBM storage controllers. 
   Was 32 - 10000 ; Now it is 32 - 131072 ( Now one could 
   allow DRBD to allocate up to half a gigabyte of memory as 
   receive buffers)
 * A fix to the Makefiles to make building of RPMs work on RAHS4.
 * A workaround to have DBRD running on PPC64 with Linux-2.4.x kernels,
   on Linux-2.6.x everything was fine already.
 * Removal of dead code (busy_blocks).
 * LINBIT drbd rpms now conflict with km_drbd
   (SuSE's kernel module source hook)
 * possibly existing /lib/modules/*/extra/drbd.ko are renamed to .orig in the
   post-install scripts to avoid conflicts with existing modules from
   distribution kernel packages
 * fixed flex input buffer overflow
   drbdadm_scanner.fl produced tokens of arbitrary length due to excessive use
   of "+" and "*" modifiers. Now these are replaced with "{x,y}" modifiers, so
   it should no longer segfault, which was actually observed e.g. with long